Password Manager 21.2.0
* Java 16
* JavaFX 16
* new/updated icons