@@ -9,12 +9,12 @@
 
     <groupId>org.panteleyev</groupId>
     <artifactId>password-manager</artifactId>
-    <version>21.1.2</version>
+    <version>21.2.0</version>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>15</maven.compiler.release>
+        <maven.compiler.release>16</maven.compiler.release>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <appModule>password.manager</appModule>
         <appMainClass>org.panteleyev.pwdmanager.PasswordManagerApplication</appMainClass>
@@ -27,8 +27,8 @@
         <javaFxPluginVersion>0.0.5</javaFxPluginVersion>
         <jpackageMavenPluginVersion>1.4.0</jpackageMavenPluginVersion>
         <!-- Dependencies -->
-        <javaFxVersion>15.0.1</javaFxVersion>
-        <javaFxHelpersVersion>1.7.0</javaFxHelpersVersion>
+        <javaFxVersion>16</javaFxVersion>
+        <javaFxHelpersVersion>1.8.0</javaFxHelpersVersion>
         <controlsFxVersion>11.0.3</controlsFxVersion>
         <testNgVersion>7.3.0</testNgVersion>
     </properties>
@@ -102,11 +102,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mavenCompilerPluginVersion}</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -125,9 +120,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${mavenSurefirePluginVersion}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -164,7 +156,6 @@
                     </modulePaths>
                     <destination>target/dist</destination>
                     <javaOptions>
-                        <option>--enable-preview</option>
                         <option>-Dfile.encoding=UTF-8</option>
                     </javaOptions>
                 </configuration>
@@ -200,7 +191,6 @@
                         <id>default-cli</id>
                         <configuration>
                             <options>
-                                <option>--enable-preview</option>
                                 <option>-Dfile.encoding=UTF-8</option>
                                 <option>-Dpassword.file=${password.file}</option>
                             </options>
@@ -210,7 +200,6 @@
                         <id>debug</id>
                         <configuration>
                             <options>
-                                <option>--enable-preview</option>
                                 <option>-Dfile.encoding=UTF-8</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                 <option>-Dpassword.file=${password.file}</option>
